syntax = "proto3";

package kv.v1;

option go_package = "kvservice/pkg/gen/v1/kv;kvv1";

import "v1/options/options.proto";

service KVService {
  rpc Get(GetRequest) returns (GetResponse) {
    option (options.v1.required_action) = ACTION_GET;
  }

  rpc Put(PutRequest) returns (PutResponse) {
    option (options.v1.required_action) = ACTION_PUT;
  }

  rpc Watch(WatchRequest) returns (stream WatchResponse) {
    option (options.v1.required_action) = ACTION_WATCH;
  }
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message PutRequest {
  string key   = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message WatchRequest {
  string key = 1;
}

message WatchResponse {
  string key       = 1;
  string value     = 2;
  string user_id   = 3;
  int64  timestamp = 4;
}